# platform_org

./: .env.example  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  pyproject.toml
config/: celery_app.py  settings.py  urls.py
deploy/helm/platform-org/: Chart.yaml  values.yaml
deploy/k8s/: api-service.yaml  namespace.yaml
docker/: Dockerfile
platform_org/: __init__.py  apps.py  urls.py  views.py
platform_org/accounts/: urls.py
platform_org/audit/: admin.py  models.py
platform_org/audit/migrations/: 0001_initial.py
platform_org/core/: admin.py  audit.py  authentication.py  models.py  notifications.py  permissions.py  serializers.py  urls.py  vam_engine.py  views.py
platform_org/core/migrations/: 0001_initial.py  0002_mecontract_sla_template_microenterprise_cost_center_and_more.py  0003_microenterprisestatus_alter_microenterprise_status_and_more.py  0004_alter_slatemplate_name_and_more.py  0005_remove_mecontract_service_contractservice_and_more.py  0006_contractstatus_alter_mecontract_status.py  0007_contractservice_billing_type_and_more.py  0008_serviceslacost.py  0009_alter_mecontract_code_alter_mekpi_code_and_more.py  0009_mecontract_approved_at_mecontract_approved_by_and_more.py  0010_alter_mecontract_status.py  (+1 more)
platform_org/health/: urls.py  views.py
platform_org/integrations/: tasks.py
platform_org/sla/: admin.py  api.py  apps.py  models.py  tasks.py  urls.py
platform_org/templatetags/: form_tags.py
platform_org/tenancy/: admin.py  apps.py  middleware.py  models.py
platform_org/workflows/: apps.py  models.py  services.py
(+35 files in other folders)
